Redid the architecture for easy transaction management.